syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CounterGrpc";
 
package counter;
 
service Counter {
  rpc GetUnreadCount (GetUnreadCountRequest) returns (GetUnreadCountReply);
}
 
message GetUnreadCountRequest {
  uint32 user_id = 1;
}

message GetUnreadCountReply {
  uint32 count = 1;
}