syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "ProfileGrpc";
 
package profile;
 
service Users {
  rpc GetUserById (GetUserByIdRequest) returns (UserReply);
  rpc AddUser (AddUserRequest) returns (AddUserReply);
  rpc GetUsersByName (GetUsersByNameRequest) returns (stream UserReply);
}
 
message GetUserByIdRequest {
  uint32 id = 1;
}
message UserReply {
  uint32 id = 1;
  string name = 2;
  string surname = 3;   
  google.protobuf.Int32Value Age = 4;
  google.protobuf.StringValue Sex = 5;
  google.protobuf.StringValue City = 6; 
  google.protobuf.StringValue Info = 7;
}

message AddUserRequest {
  UserReply user = 1;
  string password = 2;
}

message AddUserReply {
  uint32 id = 1;
}

message GetUsersByNameRequest {
  string name = 1;
  string surname = 2;
}